Fixed gap that appears under TT image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,7 +669,7 @@ hr {
 /* =============================================== TT CAMPING SECTION STYLING =============================================== */
 
 #tourist-trophy-container {
-    height: 1100px;
+    height: 900px;
     width: 100%;
     overflow: hidden;
     position: relative;
